[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.2.0",
    "openai-agents>=0.6.4",
    "openai-core>=0.0.1",
    "openapi-schema-validator>=0.6.3",
    "openapi-spec-validator>=0.7.2",
    "opentelemetry-api>=1.39.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "tavily>=1.1.0",
]
